Feature/189 upgrade to 70 (#192)
* #189 upgrade to 7.0

- cas uses 7.0.4
- spring boot to 3.2.1
- some tests and code needs additional changes to work with the new api changes
- gradle dependencies had to be modified

* #189 more changes for 7.0 upgrade

- upgrade makefile version to 9.0.4
- Build changes to gradle, Dockerfile and docker-compose.yml

* #189 remove most exclusions due to version update

* #189

further updates to thyemleaf and service classes for cas 7.0 upgrade

* #180 add spring auto-configuration-file

* #189 oidc and oauth use new findServiceBy method

new findByService method implemented

* #189 refactoring CesServicesManager.java

- switch replaced with if else
- cleaned up loops
- added additional debug log
- removed debug logs used for testing

* #180 get all tickets in CesOAuthSingleLogoutMessageCreator to get oauth access-token

* #189 update tests

- RegistryEtcdTest uncommented
- CesServicesManagerStageProductiveTest uncommented and modified

* #180 get all tickets in CesOAuthSingleLogoutMessageCreator to get oauth access-token

Previously the descendant-tickets of the ticket-granting-ticket where used to get the ouath-ticket. But now, with CAS 7.0, the descendant-tickets are empty and we need to find the ouath-ticket from all tickets of ticket-registry.

* #180 refactored unwrapped thymeleaf fragment expression

* #189 update password reset function

more arguments to the constructor needed

* #189 fix CesSendPasswordResetInstructionsAction and related test

* #189 version update to 7.0.4.1

* #180 fix Jenkins-Pipeline

update ces-build-lib to v2.2.1
update cypress to v13.10.0

* #189 review changes

* #180 update changelog

* #180 update documentation

* #180 improve test-coverage and remove code-smells

* #189 add missing makefiles from makefile upgrade

* #180 improve test-coverage

* #180 update examples in integration-test-docs

---------

Co-authored-by: Benja